[project]
name = "ladder"
version = "0.1.0"
description = "A software rasterizer with taichi for fast realtime algorithm testing."
authors = [
    { name = "cupofc0t", email = "cupofc0t@gmail.com" }
]
dependencies = [
    "taichi>=1.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ladder"]
